[project]
name = "mmcd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython==1.81",
    "modlamp==4.3.0",
    "numpy==1.23.1",
    "peptidebuilder==1.1.0",
    "pytorch-lightning==1.9.2",
    "pytorch-metric-learning==2.1.0",
    "tensorboard>=2.20.0",
    "torch==1.12.0",
    "torch-cluster>=1.6.3",
    "torch-geometric==2.0.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
]
